阶段一 Python基础编程/课程资料/day01/问题文件（积累错误）/Python-SyntaxError.txt
错误描述：
  File "D:/PycharmProjects/newProject/09-Python中编译错误.py", line 1
    name = '赵云
              ^
SyntaxError: EOL while scanning string literal

错误解析：
① 查文件       09-Python中编译错误.py
② 查行号       1行
③ 查错误信息   SyntaxError语法错误，在赵云这个值的位置，丢失了结尾

解决方案：
把符号补充完整